# NodeMotion

./: README.md  settings.gradle
.github/workflows/: 2main.yml  android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/nodemotion/: MainActivity.java
app/src/main/res/values/: strings.xml
